--- a/views/business/goods-list-outbound.html
+++ b/views/business/goods-list-outbound.html
@@ -16,7 +16,6 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12">
             <div class="layui-card">
-                <div class="layui-card-header">库存列表</div>
                 <div class="layui-card-body">
                     <div class="demoTable" style="margin-bottom: 10px;">
                         物品名称：
@@ -75,6 +74,26 @@
             , layer = layui.layer
             , table = layui.table;
 
+        element.render();
+        //方法级渲染
+        table.render({
+            elem: '#order-table'
+            , url: domain + 'api/goods/findGoodsPage?t=' + new Date().getTime()
+            , cols: [[
+                {field: 'goodsName', title: '物品名称', width: 200, sort: true}
+                , {field: 'goodsModel', title: '物品型号', width: 180, sort: true}
+                , {field: 'num', title: '物品数量', width: 100}
+                , {field: 'unit', title: '单位', width: 80, sort: true}
+                , {field: 'color', title: '颜色', width: 60}
+                , {field: 'type', title: '类型', templet: '#typeTpl', width: 80, unresize: true}
+                , {field: 'createTime', title: '创建时间'}
+                , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo', width:180}
+            ]]
+            , id: 'orderTable'
+            , page: true
+            ,height: 'full-100'
+        });
+
         //监听工具条
         table.on('tool(order-table)', function (obj) {
             var data = obj.data;
@@ -93,26 +112,6 @@
                 parent.layer.close(index);
             }
         });
-        //方法级渲染
-        table.render({
-            elem: '#order-table'
-            , url: domain + 'api/goods/findGoodsPage'
-            , cols: [[
-                {field: 'goodsName', title: '物品名称', width: 200, sort: true}
-                , {field: 'goodsModel', title: '物品型号', width: 180, sort: true}
-                , {field: 'num', title: '物品数量', width: 100}
-                , {field: 'unit', title: '单位', width: 80, sort: true}
-                , {field: 'color', title: '颜色', width: 60}
-                , {field: 'type', title: '类型', templet: '#typeTpl', width: 80, unresize: true}
-                , {field: 'createTime', title: '创建时间'}
-                , {align: 'center', fixed: 'right', toolbar: '#user-table-barDemo', width:180}
-            ]]
-            , id: 'orderTable'
-            , page: true
-            ,height: 'full-100'
-        });
-
-        element.render();
 
         /* 触发弹层 */
         var active = {
