--- a/views/business/goods-list.html
+++ b/views/business/goods-list.html
@@ -82,7 +82,7 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/goods/findGoodsPage'
+            , url: domain + 'api/goods/findGoodsPage?t=' + new Date().getTime()
             , cols: [[
                 {field: 'goodsName', title: '物品名称', width: 200, sort: true}
                 , {field: 'goodsModel', title: '物品型号', width: 180, sort: true}
