--- a/views/business/goods-record-list.html
+++ b/views/business/goods-record-list.html
@@ -66,7 +66,7 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/goodsRecord/findRecordPage'
+            , url: domain + 'api/goodsRecord/findRecordPage?t=' + new Date().getTime()
             , cols: [[
                 {field: 'goodsName', title: '物品名称', width: 200, sort: true}
                 , {field: 'goodsModel', title: '物品型号', width: 120, sort: true}
