--- a/views/business/order-add.html
+++ b/views/business/order-add.html
@@ -38,11 +38,20 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <div class="layui-inline">
+                    <!--<div class="layui-inline">
                         <label class="layui-form-label">选择样品</label>
                         <div class="layui-input-inline">
                             <input type="hidden" name="sampleId" id="sampleId" lay-verify="" autocomplete="off" placeholder="请选择样品" class="layui-input">
                             <button type="button" id="select_sample" class="layui-btn">样品</button>
+                        </div>
+                    </div>-->
+                    <div class="layui-inline">
+                        <label class="layui-form-label">选择样品</label>
+                        <div class="layui-input-inline">
+                            <input type="hidden" name="sampleId" id="sampleId" lay-verify="" autocomplete="off" placeholder="请选择样品" class="layui-input">
+                            <input type="hidden" name="sampleText" id="sampleText" lass="layui-input">
+                            <button type="button" id="sample" class="layui-btn">样品</button>
+                            <button type="button" id="select_sample" class="layui-btn">选择样品</button>
                         </div>
                     </div>
                     <div class="layui-inline">
@@ -124,14 +133,24 @@
         var $ = layui.$
             , layer = layui.layer
             , laydate = layui.laydate
-            , form = layui.form
-            , layedit = layui.layedit;
+            , form = layui.form;
+
         form.render(null, 'component-form-group');
         laydate.render({
             elem: '#LAY-component-form-group-date'
         });
         laydate.render({
             elem: '#order-date'
+        });
+
+        $("#sample").click(function () {
+            var jsonText = $("#sampleText").val();
+            if("" == jsonText){
+                jsonText = "{ \"code\": 0,\"msg\": \"\",\"start\": 0}";
+            }
+            layer.photos({
+                photos: JSON.parse(jsonText) //格式见API文档手册页
+            });
         });
 
         $("#select_sample").click(function () {
