--- a/views/business/order-list-read.html
+++ b/views/business/order-list-read.html
@@ -92,7 +92,7 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/order/findOrderPage?status=1'
+            , url: domain + 'api/order/findOrderPage?status=1&t=' + new Date().getTime()
             , cols: [[
                 {field: 'id', title: '编号', width: 80, sort: true}
                 , {field: 'productName', title: '产品名称', width: 180, sort: true}
