--- a/views/business/plan-add.html
+++ b/views/business/plan-add.html
@@ -26,7 +26,9 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">样品</label>
                         <div class="layui-input-inline">
-                            <input type="hidden" name="orderId" id = "sampleId" lay-verify="" autocomplete="off" placeholder="" class="layui-input">
+                            <input type="hidden" name="sampleText" id="sampleText" lass="layui-input">
+                            <input type="hidden" name="orderId" id = "sampleId" class="layui-input">
+                            <button type="button" id="sample" class="layui-btn">样品</button>
                             <button type="button" class="layui-btn" id = "select_sample">选择样品</button>
                         </div>
                     </div>
@@ -127,6 +129,16 @@
                 }
             });
             layer.full(index);
+        });
+
+        $("#sample").click(function () {
+            var jsonText = $("#sampleText").val();
+            if("" == jsonText){
+                jsonText = "{ \"code\": 0,\"msg\": \"\",\"start\": 0}";
+            }
+            layer.photos({
+                photos: JSON.parse(jsonText) //格式见API文档手册页
+            });
         });
 
 
