--- a/views/business/plan-list.html
+++ b/views/business/plan-list.html
@@ -85,7 +85,7 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/plan/findPlanPage'
+            , url: domain + 'api/plan/findPlanPage?t=' + new Date().getTime()
             , cols: [[
                 {field: 'planName', title: '生产代号', width: 120, sort: true}
                 , {field: 'productName', title: '产品名称', width: 120, sort: true}
