--- a/views/business/purchase-order-list-warehouse.html
+++ b/views/business/purchase-order-list-warehouse.html
@@ -86,7 +86,7 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/purchaseOrder/findPage?status=1'
+            , url: domain + 'api/purchaseOrder/findPage?status=1&t=' + new Date().getTime()
             , cols: [[
                 {field: 'goodsName', title: '物品名称', width: 180, sort: true}
                 , {field: 'goodsModel', title: '物品型号', width: 180, sort: true}
